Bug 199161 - invalid CW_min/CW_max WARNING net/mac80211/driver-ops.c:175 drv_conf_tx
Summary: invalid CW_min/CW_max WARNING net/mac80211/driver-ops.c:175 drv_conf_tx
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: DO NOT USE - assign "network-wireless-intel" component instead
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-21 21:48 UTC by Chris Murphy
Modified: 2018-03-27 06:35 UTC (History)
0 users

See Also:
Kernel Version: 4.15.10-300.fc27.x86_64
Subsystem:
Regression: No
Bisected commit-id:


Attachments
kernel messages (203.14 KB, text/plain)
2018-03-21 21:50 UTC, Chris Murphy
Details
lspci -vvnn (30.11 KB, text/plain)
2018-03-21 21:50 UTC, Chris Murphy
Details
dmidecode (19.62 KB, text/plain)
2018-03-21 21:50 UTC, Chris Murphy
Details
fix (1.25 KB, patch)
2018-03-25 05:49 UTC, Emmanuel Grumbach
Details | Diff

Description Chris Murphy 2018-03-21 21:48:00 UTC
This may be a one off, but I'm getting the following call trace. The full log will be attached along with dmidecode and lspci.

Hardware is an HP Spectre laptop with intel wireless.

[12541.679057] wlo1: disconnect from AP 9e:0f:6f:4a:fd:c0 for new auth to 96:0f:6f:4a:fd:b8
[12541.684453] wlo1: authenticate with 96:0f:6f:4a:fd:b8
[12541.691340] wlo1: send auth to 96:0f:6f:4a:fd:b8 (try 1/3)
[12541.802863] wlo1: send auth to 96:0f:6f:4a:fd:b8 (try 2/3)
[12541.862032] wlo1: authenticated
[12541.862995] wlo1: associate with 96:0f:6f:4a:fd:b8 (try 1/3)
[12541.868899] wlo1: RX ReassocResp from 96:0f:6f:4a:fd:b8 (capab=0x421 status=0 aid=1)
[12541.869330] wlo1: AP has invalid WMM params (AIFSN=0 for ACI 0), will use 2
[12541.869334] wlo1: AP has invalid WMM params (AIFSN=0 for ACI 1), will use 2
[12541.869337] wlo1: AP has invalid WMM params (AIFSN=0 for ACI 2), will use 2
[12541.869339] wlo1: AP has invalid WMM params (AIFSN=0 for ACI 3), will use 2
[12541.869341] ------------[ cut here ]------------
[12541.869344] wlo1: invalid CW_min/CW_max: 0/0
[12541.869458] WARNING: CPU: 3 PID: 6866 at net/mac80211/driver-ops.c:175 drv_conf_tx+0x18f/0x1a0 [mac80211]
[12541.869460] Modules linked in: vhost_net vhost tap thunderbolt nvmem_core vfat fat rfcomm fuse ccm xt_CHECKSUM ipt_MASQUERADE nf_nat_masquerade_ipv4 tun nf_conntrack_netbios_ns nf_conntrack_broadcast xt_CT ip6t_rpfilter ip6t_REJECT nf_reject_ipv6 xt_conntrack ip_set nfnetlink ebtable_nat ebtable_broute bridge stp llc ip6table_nat nf_conntrack_ipv6 nf_defrag_ipv6 nf_nat_ipv6 ip6table_mangle ip6table_raw ip6table_security iptable_nat nf_conntrack_ipv4 nf_defrag_ipv4 nf_nat_ipv4 nf_nat nf_conntrack iptable_mangle iptable_raw iptable_security ebtable_filter ebtables ip6table_filter ip6_tables bnep sunrpc dm_crypt dm_thin_pool dm_persistent_data dm_bio_prison libcrc32c arc4 intel_rapl x86_pkg_temp_thermal snd_soc_skl intel_powerclamp coretemp snd_soc_skl_ipc iwlmvm snd_hda_ext_core kvm_intel snd_soc_sst_dsp
[12541.869568]  snd_soc_sst_ipc snd_soc_acpi kvm mac80211 snd_soc_core iTCO_wdt iTCO_vendor_support intel_wmi_thunderbolt snd_hda_codec_hdmi hp_wmi wmi_bmof sparse_keymap snd_hda_codec_conexant snd_hda_codec_generic iwlwifi snd_compress snd_pcm_dmaengine irqbypass ac97_bus crct10dif_pclmul crc32_pclmul snd_hda_intel snd_hda_codec btusb cfg80211 uvcvideo btrtl btbcm ghash_clmulni_intel intel_cstate snd_hda_core snd_hwdep btintel videobuf2_vmalloc intel_uncore snd_seq videobuf2_memops snd_seq_device videobuf2_v4l2 intel_rapl_perf bluetooth videobuf2_core snd_pcm videodev media joydev snd_timer snd ecdh_generic rfkill i2c_i801 soundcore mei_me mei processor_thermal_device idma64 intel_soc_dts_iosf intel_pch_thermal intel_lpss_pci shpchp wmi intel_lpss tpm_crb int3403_thermal tpm_tis int340x_thermal_zone
[12541.869678]  pinctrl_sunrisepoint pinctrl_intel acpi_pad tpm_tis_core tpm int3400_thermal hp_wireless acpi_thermal_rel btrfs xor zstd_decompress zstd_compress xxhash raid6_pq i915 i2c_algo_bit drm_kms_helper nvme drm crc32c_intel nvme_core serio_raw video
[12541.869723] CPU: 3 PID: 6866 Comm: kworker/u8:1 Not tainted 4.15.10-300.fc27.x86_64 #1
[12541.869726] Hardware name: HP HP Spectre Notebook/81A0, BIOS F.40 02/26/2018
[12541.869777] Workqueue: phy0 ieee80211_iface_work [mac80211]
[12541.869818] RIP: 0010:drv_conf_tx+0x18f/0x1a0 [mac80211]
[12541.869823] RSP: 0018:ffffb21bc587f7a8 EFLAGS: 00010282
[12541.869828] RAX: 0000000000000000 RBX: ffff93137127c8c0 RCX: 0000000000000006
[12541.869832] RDX: 0000000000000007 RSI: 0000000000000092 RDI: ffff93137ed968f0
[12541.869836] RBP: 00000000ffffffea R08: 0000000000000711 R09: 0000000000000004
[12541.869839] R10: 0000000000000000 R11: 0000000000000001 R12: ffff9313618dc760
[12541.869842] R13: 0000000000000000 R14: ffffb21bc587f7f0 R15: ffff93137127c8c0
[12541.869848] FS:  0000000000000000(0000) GS:ffff93137ed80000(0000) knlGS:0000000000000000
[12541.869852] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[12541.869855] CR2: 00007ff74b762000 CR3: 000000011120a003 CR4: 00000000003606e0
[12541.869858] Call Trace:
[12541.869919]  ieee80211_sta_wmm_params+0x2d6/0x360 [mac80211]
[12541.869980]  ieee80211_assoc_success+0x574/0xae4 [mac80211]
[12541.869998]  ? sched_clock+0x5/0x10
[12541.870005]  ? sched_clock+0x5/0x10
[12541.870011]  ? sched_clock_cpu+0xc/0xb0
[12541.870019]  ? up+0x12/0x60
[12541.870026]  ? irq_work_queue+0x99/0xa0
[12541.870034]  ? console_unlock+0x2df/0x4c0
[12541.870042]  ? vprintk_emit+0x32c/0x390
[12541.870064]  ? iwl_trans_pcie_write8+0x20/0x20 [iwlwifi]
[12541.870080]  ? iwl_trans_pcie_tx+0xadf/0x1220 [iwlwifi]
[12541.870130]  ? ieee802_11_parse_elems_crc+0x1af/0x590 [mac80211]
[12541.870137]  ? printk+0x52/0x6e
[12541.870175]  ieee80211_rx_mgmt_assoc_resp+0x17c/0x300 [mac80211]
[12541.870213]  ieee80211_sta_rx_queued_mgmt+0x3fe/0x680 [mac80211]
[12541.870247]  ? __ieee80211_tx+0x6d/0x140 [mac80211]
[12541.870252]  ? lock_timer_base+0x67/0x80
[12541.870257]  ? __internal_add_timer+0x1a/0x50
[12541.870263]  ? __switch_to_asm+0x40/0x70
[12541.870267]  ? __switch_to_asm+0x34/0x70
[12541.870271]  ? __switch_to_asm+0x40/0x70
[12541.870275]  ? __switch_to_asm+0x34/0x70
[12541.870279]  ? __switch_to_asm+0x40/0x70
[12541.870283]  ? __switch_to_asm+0x34/0x70
[12541.870287]  ? __switch_to_asm+0x40/0x70
[12541.870291]  ? __switch_to_asm+0x34/0x70
[12541.870294]  ? __switch_to_asm+0x40/0x70
[12541.870298]  ? __switch_to_asm+0x34/0x70
[12541.870302]  ? __switch_to_asm+0x40/0x70
[12541.870306]  ? __switch_to_asm+0x34/0x70
[12541.870310]  ? __switch_to_asm+0x40/0x70
[12541.870314]  ? __switch_to_asm+0x34/0x70
[12541.870318]  ? __switch_to_asm+0x40/0x70
[12541.870321]  ? __switch_to_asm+0x34/0x70
[12541.870325]  ? __switch_to_asm+0x40/0x70
[12541.870329]  ? __switch_to_asm+0x34/0x70
[12541.870333]  ? __switch_to_asm+0x40/0x70
[12541.870336]  ? __switch_to_asm+0x34/0x70
[12541.870340]  ? __switch_to_asm+0x40/0x70
[12541.870344]  ? __switch_to_asm+0x34/0x70
[12541.870348]  ? __switch_to_asm+0x40/0x70
[12541.870352]  ? __switch_to_asm+0x34/0x70
[12541.870356]  ? __switch_to_asm+0x40/0x70
[12541.870359]  ? __switch_to_asm+0x34/0x70
[12541.870366]  ? __switch_to+0xa2/0x4b0
[12541.870370]  ? __switch_to_asm+0x40/0x70
[12541.870401]  ieee80211_iface_work+0x21c/0x340 [mac80211]
[12541.870411]  process_one_work+0x175/0x390
[12541.870418]  worker_thread+0x2e/0x380
[12541.870424]  ? process_one_work+0x390/0x390
[12541.870429]  kthread+0x113/0x130
[12541.870435]  ? kthread_create_worker_on_cpu+0x70/0x70
[12541.870441]  ? do_syscall_64+0x74/0x180
[12541.870448]  ? SyS_exit+0x13/0x20
[12541.870453]  ret_from_fork+0x35/0x40
[12541.870457] Code: e8 5d 41 5c 41 5d 41 5e c3 41 0f b7 4e 04 48 8d b3 18 04 00 00 0f b7 d0 48 c7 c7 f8 34 b5 c0 c6 05 cb d5 0a 00 01 e8 b1 67 5c f3 <0f> 0b e9 b9 fe ff ff 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 44 00 
[12541.870541] ---[ end trace 651f12d8e54f9a2b ]---
[12541.870573] wlo1: failed to set TX queue parameters for AC 0
[12541.870582] wlo1: failed to set TX queue parameters for AC 1
[12541.870587] wlo1: failed to set TX queue parameters for AC 2
[12541.870591] wlo1: failed to set TX queue parameters for AC 3
[12541.873270] wlo1: associated
[12543.028086] Lockdown: debugfs is restricted; see man kernel_lockdown.7
Comment 1 Chris Murphy 2018-03-21 21:50:26 UTC
Created attachment 274855 [details]
kernel messages
Comment 2 Chris Murphy 2018-03-21 21:50:40 UTC
Created attachment 274857 [details]
lspci -vvnn
Comment 3 Chris Murphy 2018-03-21 21:50:53 UTC
Created attachment 274859 [details]
dmidecode
Comment 4 Chris Murphy 2018-03-21 21:51:53 UTC
6c:00.0 Network controller [0280]: Intel Corporation Wireless 8260 [8086:24f3] (rev 3a)
	Subsystem: Intel Corporation Device [8086:9010]

	Kernel driver in use: iwlwifi
	Kernel modules: iwlwifi
Comment 5 Chris Murphy 2018-03-21 21:52:25 UTC
[    4.368394] iwlwifi 0000:6c:00.0: loaded firmware version 34.0.1 op_mode iwlmvm
Comment 6 Emmanuel Grumbach 2018-03-22 15:55:38 UTC
This is a bug in the AP. We shouldn't WARN so loudly though.
Comment 7 Chris Murphy 2018-03-22 16:14:26 UTC
Thanks for the reply. AP is ISP (Xfinity) owned and managed unfortunately, and out of my control but for bug completeness.

ARRIS Group, Inc.
Model: TG1682G
Hardware Revision: 11.0 
eMTA & DOCSIS Software Version: 10.1.11.SIP.PC20.CT
Software Image Name: TG1682_2.8p24s1_PROD_sey
Comment 8 Emmanuel Grumbach 2018-03-25 05:49:12 UTC
Created attachment 274923 [details]
fix

This will make the driver code less noisy. It'll allow you to connect with HT as well since we'll now take the defaults WMM parameters.
Comment 9 Emmanuel Grumbach 2018-03-27 06:35:12 UTC
Patch published on the mailing list and merged internally.

Note You need to log in before you can comment on or make changes to this bug.